Use latest JAS version 2.5.5318